workloads/must-gather.local.2378005887078000116/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-07d359641e4827bc34e31a5cefaf986acf4e78064fef531124cac0ed6da3e94c/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/multus.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-01-09T04:38:55Z"
  generation: 2
  labels:
    app: multus-admission-controller
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:service.beta.openshift.io/inject-cabundle: {}
        f:labels:
          f:app: {}
        f:ownerReferences:
          k:{"uid":"b8592153-d60b-43d6-8417-eb32b9b3af15"}: {}
      f:webhooks:
        k:{"name":"multus-validating-config.k8s.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            f:service:
              f:name: {}
              f:namespace: {}
              f:path: {}
          f:name: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: cluster-network-operator/operconfig
    operation: Apply
    time: "2023-01-09T04:38:55Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"multus-validating-config.k8s.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2023-01-09T04:41:10Z"
  name: multus.openshift.io
  ownerReferences:
  - apiVersion: operator.openshift.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Network
    name: cluster
    uid: b8592153-d60b-43d6-8417-eb32b9b3af15
  resourceVersion: "5378"
  uid: 99853938-f7dc-4512-9bd4-5090be2558c5
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJTVlxYkJBd2MyTDB3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM016SXpPVEkyTkRBZQpGdzB5TXpBeE1Ea3dORFF4TUROYUZ3MHlOVEF6TURrd05EUXhNRFJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOek15TXpreU5qUXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRFRjYzViVmh0L1FYbzkrUVNURGZoK3U5Ynpwc1BVOXcxYgpXL25ub05scDZVaU [...]
    service:
      name: multus-admission-controller
      namespace: openshift-multus
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: multus-validating-config.k8s.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - k8s.cni.cncf.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - network-attachment-definitions
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 30
