workloads/must-gather.local.2378005887078000116/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-07d359641e4827bc34e31a5cefaf986acf4e78064fef531124cac0ed6da3e94c/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/prometheusrules.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-01-09T04:46:15Z"
  generation: 2
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: prometheus-operator
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:service.beta.openshift.io/inject-cabundle: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/name: {}
      f:webhooks:
        .: {}
        k:{"name":"prometheusrules.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: operator
    operation: Update
    time: "2023-01-09T04:46:15Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"prometheusrules.openshift.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2023-01-09T04:46:15Z"
  name: prometheusrules.openshift.io
  resourceVersion: "18191"
  uid: 796ca7dc-7f4e-435a-aff5-6428a0ef495a
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJTVlxYkJBd2MyTDB3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM016SXpPVEkyTkRBZQpGdzB5TXpBeE1Ea3dORFF4TUROYUZ3MHlOVEF6TURrd05EUXhNRFJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOek15TXpreU5qUXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRFRjYzViVmh0L1FYbzkrUVNURGZoK3U5Ynpwc1BVOXcxYgpXL25ub05scDZVaU [...]
    service:
      name: prometheus-operator-admission-webhook
      namespace: openshift-monitoring
      path: /admission-prometheusrules/validate
      port: 8443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: prometheusrules.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - monitoring.coreos.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - prometheusrules
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 5
