workloads/must-gather.local.2378005887078000116/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-07d359641e4827bc34e31a5cefaf986acf4e78064fef531124cac0ed6da3e94c/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/vlokistack.loki.grafana.com-tphpd.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2023-01-09T05:32:20Z"
  generateName: vlokistack.loki.grafana.com-
  generation: 1
  labels:
    olm.owner: loki-operator.v5.6.0
    olm.owner.kind: ClusterServiceVersion
    olm.owner.namespace: openshift-operators-redhat
    olm.webhook-description-generate-name: vlokistack.loki.grafana.com
    olm.webhook-description-hash: 7994bbd89f
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:generateName: {}
        f:labels:
          .: {}
          f:olm.owner: {}
          f:olm.owner.kind: {}
          f:olm.owner.namespace: {}
          f:olm.webhook-description-generate-name: {}
          f:olm.webhook-description-hash: {}
      f:webhooks:
        .: {}
        k:{"name":"vlokistack.loki.grafana.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: olm
    operation: Update
    time: "2023-01-09T05:32:20Z"
  name: vlokistack.loki.grafana.com-tphpd
  resourceVersion: "43987"
  uid: fbb8970d-fc30-422b-b755-21686e59b49d
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ2VENDQVdLZ0F3SUJBZ0lJRS9scDZkZGFqNXd3Q2dZSUtvWkl6ajBFQXdJd1FqRVdNQlFHQTFVRUNoTU4KVW1Wa0lFaGhkQ3dnU1c1akxqRW9NQ1lHQTFVRUF4TWZiMnh0TFhObGJHWnphV2R1WldRdE1UTm1PVFk1WlRsawpOelZoT0dZNVl6QWVGdzB5TXpBeE1Ea3dOVE15TWpCYUZ3MHlOVEF4TURnd05UTXlNakJhTUVJeEZqQVVCZ05WCkJBb1REVkpsWkNCSVlYUXNJRWx1WXk0eEtEQW1CZ05WQkFNVEgyOXNiUzF6Wld4bWMybG5ibVZrTFRFelpqazIKT1dVNVpEYzFZVGhtT1dNd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFSeHYrT2lJT0tnZW52VQoxQjJhVFFGaTgrOT [...]
    service:
      name: loki-operator-controller-manager-service
      namespace: openshift-operators-redhat
      path: /validate-loki-grafana-com-v1-lokistack
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vlokistack.loki.grafana.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - loki.grafana.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - lokistacks
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
